--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "tg-webapp",
-  "version": "0.1.0",
+  "name": "tg-shop-vite",
   "private": true,
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,14 +9,16 @@
     "preview": "vite preview --port 3007 --host 0.0.0.0"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.1"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "^5.0.0",
+    "@types/node": "^24.2.1",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "@vitejs/plugin-react": "^4.0.0",
+    "typescript": "^5.5.4",
     "vite": "^7.1.1"
   }
 }
